@@ -1,0 +1,27 @@
+version=0.5.1
+
+dir.build=build
+dir.dist=dist
+dir.src=src
+dir.libs=libs
+dir.configs=configs
+dir.scripts=scripts
+dir.applets=applets
+dir.servlets=servlets
+dir.resources=resources
+
+dist.file.service=jets3t-${version}.jar
+dist.file.cockpit=cockpit-${version}.jar
+dist.file.cockpitlite=cockpitlite-${version}.jar
+dist.file.synchronize=synchronize-${version}.jar
+dist.file.uploader=uploader-${version}.jar
+dist.file.gatekeeper=gatekeeper-${version}.war
+dist.file.guisupport=jets3t-gui-${version}.jar
+
+debug=on
+build.target=1.4
+
+keystore.file=your_keystore_file
+keystore.storepass=your_storepass
+keystore.keypass=your_keypass
+keystore.alias=your_alias
